--- a/style.css
+++ b/style.css
@@ -20,26 +20,25 @@ a {
 }
 
 .header {
-  position: relative;
   margin-top: 20px;
 }
+.header .navbar_burger {
+  font-size: 35px;
+  color: #978D8D;
+}
 .header .title {
-  height: 60px;
-  line-height: 60px;
   text-align: center;
+  flex-grow: 1;
+}
+.header .title a {
   font-family: "Prata", serif;
   color: #CC6262;
   font-weight: 100;
   font-size: 45px;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
-.header .navbar_burger {
-  position: absolute;
-  font-size: 35px;
-  padding-left: 10px;
-  color: #978D8D;
-  top: 50%;
-  transform: translate(0, -50%);
+.header .hr_solid {
+  border: 1.5px solid #000;
 }
 
 .search_box {
@@ -707,6 +706,12 @@ footer .foot_bottom_txt2 span {
 }
 
 @media all and (min-width: 645px) {
+  .header .title {
+    font-size: 70px;
+  }
+  .header .navbar_burger {
+    display: none;
+  }
   footer .foot_bottom .foot_bottom_txt1 span:nth-child(1) {
     display: flex;
     justify-content: center;
