--- a/style.scss
+++ b/style.scss
@@ -34,31 +34,32 @@ a {
 
 
 
-
 .header {
-    position: relative;
     margin-top: 20px;
 
-    .title {
-        height: 60px;
-        line-height: 60px;
-        text-align: center;
-        font-family: $point-font;
-        color: $point-color;
-        font-weight: 100;
-        font-size: 45px;
-        text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-
-    }
-
     .navbar_burger {
-        position: absolute;
         font-size: 35px;
-        padding-left: 10px;
         color: $icon-color;
-        top: 50%;
-        transform: translate(0, -50%);
     }
+
+    .title {
+        text-align: center;
+        flex-grow: 1;
+        a{
+            font-family: $point-font;
+            color: $point-color;
+            font-weight: 100;
+            font-size: 45px;
+            text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        }
+    }
+
+
+
+    .hr_solid{
+        border: 1.5px solid #000;
+    }
+
 }
 
 
@@ -844,6 +845,19 @@ footer {
 }
 
 @media all and (min-width: 645px) {
+
+    .header{
+        .title{
+            font-size: 70px;
+        }
+        .navbar_burger{
+            display: none;
+        }
+    }
+
+
+
+
     footer {
         .foot_bottom {
             .foot_bottom_txt1 {
