--- a/style.scss
+++ b/style.scss
@@ -191,6 +191,8 @@ a {
 
 .main_list{
 
+
+
     .article_list {
         margin: 30px 0;
     
@@ -231,6 +233,16 @@ a {
 
     .short_list {
         position: relative;
+
+        .second_line {
+            width: 95%;
+            margin-top: 30px;
+            padding-bottom: 50px;
+            margin: 0 auto;
+            height: 3px;
+            border-top: 2px solid #ccc;
+            box-sizing: border-box;
+        }
     
         .title_all {
             position: absolute;
@@ -250,7 +262,6 @@ a {
             align-content: flex-end;
             padding-top: 50px;
             box-sizing: border-box;
-            margin-top: 20px;
             font-family: $base-font;
         
             .short_list_img1,
@@ -281,7 +292,7 @@ a {
             }
         
             .short_list_tit {
-                top: 23px;
+                top: 60px;
             }
         
         
@@ -749,66 +760,70 @@ a {
         }
 
     }
+}
 
 
-    .Featured {
-        position: relative;
-        display: flex;
-        padding: 10px;
-        box-sizing: border-box;
-        flex-direction: row;
-        flex-wrap: wrap;
-        font-family: $base-font;
-        padding-top: 50px;
-        box-sizing: border-box;
+.Featured {
+    position: relative;
+    display: flex;
+    padding: 10px;
+    box-sizing: border-box;
+    flex-direction: row;
+    flex-wrap: wrap;
+    font-family: $base-font;
+    padding-top: 50px;
+    box-sizing: border-box;
+
+    .Featured_tit  {
+        width: 100%;
+    }
 
 
-        .Featured_box3,
-        .Featured_box4 {
-            display: none;
-        }
+    .Featured_box3,
+    .Featured_box4 {
+        display: none;
+    }
 
-        /* display:none */
+    /* display:none */
 
-        .Featured_box {
-            width: 50%;
+    .Featured_box {
+        width: 50%;
 
-            .Featured_img {
-                padding: 5px;
-                box-sizing: border-box;
+        .Featured_img {
+            padding: 5px;
+            box-sizing: border-box;
 
-                img {
-                    width: 100%;
-                    height: auto;
-                    display: block;
-                }
-            }
-
-            .Featured_txt {
-                font-size: 12px;
-                padding: 0px 5px;
-                box-sizing: border-box;
-
-                p {
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                }
+            img {
+                width: 100%;
+                height: auto;
+                display: block;
             }
         }
 
-        .Featured_box1,
-        .Featured_box3 {
-            .Featured_img {
-                padding-left: 0px;
+        .Featured_txt {
+            font-size: 12px;
+            padding: 0px 5px;
+            box-sizing: border-box;
+
+            p {
+                display: flex;
+                justify-content: center;
+                align-items: center;
             }
         }
+    }
 
-        .Featured_box2,
-        .Featured_box4 {
-            .Featured_img {
-                padding-right: 0px;
-            }
+    .Featured_box1,
+    .Featured_box3 {
+        .Featured_img {
+            padding-left: 0px;
+        }
+    }
+
+    .Featured_box2,
+    .Featured_box4 {
+        .Featured_img {
+            padding-right: 0px;
         }
     }
 }
@@ -1005,21 +1020,63 @@ footer {
     
     .article_box{
         h1{
-            font-size: 50px;
+            letter-spacing: -2px;
+            font-size: 47px;
+        }
+
+        p {
+            display: inline;
+            font-size: 14px;
+        }
+
+        .italic {
+            letter-spacing: -0.3px;
+            font-size: 14px;
         }
     }
 
 
 
     .main_list{
-        border: 1px solid #000;
         display: flex;
+
+        .article_list {
+
+            ul {
+                padding-top: 5px;
+                box-sizing: border-box;
+
+                li {
+                    height: 18px;
+                    font-size: 14px;
+                }
+            }
+        }
+
+        .short_list  {
+            height: 100%;
+
+            .short_list_img1, .short_list_img2,
+            .short_list_img3, .short_list_img4 {
+                height: 41%;
+            }
+
+            .short_list_tit {
+                top: 13px;
+            }
+
+        }
+
+        .line.second_line {
+            display: none;
+        }
     }
 
 
 
 
     .bottom_box {
+        width: 35%;
         float: left;
 
         .line {
@@ -1123,50 +1180,50 @@ footer {
                 }
             }
         }
+    }
 
-        .Featured {
-            .Featured_box {
-                width: 25%;
-            }
-            .Featured_box3, .Featured_box4 {
-                display: block;
-            }
-
-            .Featured_box1 {
-                .Featured_img {
-                    padding: 5px;
-                    // height: 140px;
-                    overflow: hidden;
-
-                }
-            } 
-            .Featured_box4 {
-                .Featured_img {
-                    padding: 5px;
-                    // height: 140px;
-                    overflow: hidden;
-                }
-            } 
-
-            .Featured_box3 {
-                .Featured_img {
-                    padding: 5px;
-                    // padding-left: 5px; 
-                    // height: 140px;
-                    overflow: hidden;
-                }
-            }
     
-            .Featured_box2 {
-                .Featured_img {
-                    padding: 5px;
-                    // padding-right: 5px;
-                    // height: 140px;
-                    overflow: hidden;
-                }
+    .Featured {
+        .Featured_box {
+            width: 25%;
+        }
+        .Featured_box3, .Featured_box4 {
+            display: block;
+        }
+
+        .Featured_box1 {
+            .Featured_img {
+                padding: 5px;
+                // height: 140px;
+                overflow: hidden;
+
+            }
+        } 
+        .Featured_box4 {
+            .Featured_img {
+                padding: 5px;
+                // height: 140px;
+                overflow: hidden;
+            }
+        } 
+
+        .Featured_box3 {
+            .Featured_img {
+                padding: 5px;
+                // padding-left: 5px; 
+                // height: 140px;
+                overflow: hidden;
             }
         }
 
+        .Featured_box2 {
+            .Featured_img {
+                padding: 5px;
+                // padding-right: 5px;
+                // height: 140px;
+                overflow: hidden;
+            }
+        }
     }
 
     footer {
@@ -1189,12 +1246,99 @@ footer {
 
 
 @media all and (min-width: 1024px) {
+    .wrap {
+        display: flex;
+    }
+
+
     .PC_left_aera {
         display: flex;
         width: 65%;
+        flex-wrap: wrap;
+
+        .main_box {
+            width: 100%;
+        }
+        .article_box {
+            h1 {
+                font-size: 32px;
+            }
+            p {
+                display: inline;
+                font-size: 12px;
+            }
+
+            .italic {
+                display: inline;
+                font-size: 12px;
+            }
+        }
+        .main_list {
+            position: relative;
+            border: none;
+
+
+
+            .article_list {
+                width: 50%;
+
+                ul {
+                    width: 100%;
+                    display: flex;
+                    flex-direction: column;
+                    flex-wrap: wrap;
+
+                    li {
+                        width: 100%;
+                        height: 25px;
+                        font-size: 14px;
+                        margin-bottom: 2px;
+
+                        overflow: hidden;
+                        white-space: nowrap;
+                        text-overflow: ellipsis;
+                        word-break: break-all;
+
+                    }
+                }
+            }
+
+            .short_list {
+                align-content: flex-start;
+
+                .short_list_img1, .short_list_img2,
+                .short_list_img3, .short_list_img4 {
+                    height: auto;
+                }
+            }
+
+        }
     }
-    .PC_right_aera {
+    .PC_right_area {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
         width: 35%;
+
+        .Person_Issue {
+            width: 100%;
+
+            .Person_Issue_img {
+                
+                p.Person_side_txt{
+
+                } 
+
+            }
+        }
     }
 
+}
+
+
+@media all and (min-width: 1280px) {
+    .wrap {
+        width: 1280px;
+        margin: 0 auto;
+    }
 }
