--- a/style.css
+++ b/style.css
@@ -92,8 +92,9 @@ a {
 } */
 .main_box {
   margin-top: 20px;
-  background: rgba(217, 217, 217, 0.25);
+  background: #eee;
   display: flex;
+  box-sizing: border-box;
 }
 .main_box .main {
   width: 50%;
@@ -373,7 +374,7 @@ a {
   position: absolute;
   right: 10px;
   bottom: 0;
-  color: #aaa;
+  color: #555;
   font-size: 12px;
   font-weight: normal;
   text-align: right;
@@ -1087,12 +1088,21 @@ footer .foot_bottom_txt2 span {
     display: flex;
     width: 65%;
     flex-wrap: wrap;
+    align-content: flex-start;
   }
   .PC_left_aera .main_box {
     width: 100%;
+    margin-right: 10px;
+  }
+  .PC_left_aera .main_box .main .main_inner .inner_text {
+    margin-top: 20px;
+  }
+  .PC_left_aera .main_box .main .main_inner .inner_title {
+    margin-top: 10px;
+    font-size: 50px;
   }
   .PC_left_aera .article_box h1 {
-    font-size: 32px;
+    font-size: 38px;
   }
   .PC_left_aera .article_box p {
     display: inline;
@@ -1134,14 +1144,38 @@ footer .foot_bottom_txt2 span {
   .PC_left_aera .main_list .short_list .short_list_img4 {
     height: auto;
   }
-  .PC_right_area {
+  .bottom_box.PC_right_area {
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
     width: 35%;
   }
-  .PC_right_area .Person_Issue {
+  .bottom_box.PC_right_area .Person_Issue {
     width: 100%;
+  }
+  .bottom_box.PC_right_area .Person_Issue .Person_Issue_img .Person_side_txt {
+    width: 100%;
+    bottom: -10px;
+  }
+  .bottom_box.PC_right_area .Person_Issue .Person_Issue_img .Person_side_txt span:nth-child(1),
+  .bottom_box.PC_right_area .Person_Issue .Person_Issue_img .Person_side_txt span:nth-child(2) {
+    display: inline;
+  }
+  .bottom_box.PC_right_area .Person_Year {
+    width: 100%;
+    padding-top: 0px;
+    margin-top: 10px;
+    margin-bottom: 30px;
+  }
+  .bottom_box.PC_right_area .Person_Year .Person_Year_txt {
+    width: 100%;
+    height: 30px;
+    line-height: 35px;
+    top: auto;
+    bottom: -25px;
+  }
+  .bottom_box.PC_right_area .Person_Year .Person_Year_txt h3 {
+    color: #cc6262;
   }
 }
 @media all and (min-width: 1280px) {
